iPad: should select section name on the side tableview to indicate to the user what section the detail view is on. Also: adjusted the way colors are updated from the About page.

--- a/mudamuda/Base.lproj/Main_iPhone.storyboard
+++ b/mudamuda/Base.lproj/Main_iPhone.storyboard
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6206.8" systemVersion="13E28" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="nut-dc-nFb">
     <dependencies>
-        <deployment defaultVersion="1808" identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7026.1"/>
         <capability name="Constraints with attributes relative to the layout margin" minToolsVersion="6.0"/>
     </dependencies>
@@ -354,14 +353,14 @@
                                 <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                             </view>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1ZR-xz-RY9">
-                                <rect key="frame" x="16" y="72" width="288" height="162.5"/>
+                                <rect key="frame" x="24" y="72" width="272" height="162.5"/>
                                 <string key="text">This was a free app made with hopes that it was helpful in your learning of the Japanese language. If you have any suggestions for making this app better or would like to report omissions/errors/mistakes, feel free to send an email to be below address.</string>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" editable="NO" text="devappfeedback@icloud.com" translatesAutoresizingMaskIntoConstraints="NO" id="w42-6Y-Okk">
-                                <rect key="frame" x="16" y="242" width="288" height="40"/>
+                                <rect key="frame" x="32" y="242" width="264" height="40"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="40" id="OqE-6m-ewX"/>
@@ -372,13 +371,13 @@
                                 <dataDetectorType key="dataDetectorTypes" phoneNumber="YES" link="YES" address="YES" calendarEvent="YES"/>
                             </textView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Color Adjustment" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mOn-83-DAO">
-                                <rect key="frame" x="16" y="290" width="134" height="20.5"/>
+                                <rect key="frame" x="24" y="290" width="134" height="20.5"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <slider opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" minValue="0.0" maxValue="1" translatesAutoresizingMaskIntoConstraints="NO" id="8DU-Fo-Rr7">
-                                <rect key="frame" x="14" y="314" width="292" height="31"/>
+                                <rect key="frame" x="22" y="314" width="276" height="31"/>
                                 <connections>
                                     <action selector="sliderChanged:" destination="UGe-V3-hSr" eventType="valueChanged" id="Rbx-aD-R5w"/>
                                 </connections>
@@ -386,7 +385,7 @@
                         </subviews>
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="1ZR-xz-RY9" firstAttribute="leading" secondItem="VUl-h0-bau" secondAttribute="leadingMargin" id="4kZ-gF-8nh"/>
+                            <constraint firstItem="1ZR-xz-RY9" firstAttribute="leading" secondItem="VUl-h0-bau" secondAttribute="leadingMargin" constant="8" id="4kZ-gF-8nh"/>
                             <constraint firstItem="S4u-nw-IbJ" firstAttribute="top" secondItem="PTG-B7-Np6" secondAttribute="bottom" id="CPL-MO-W6v"/>
                             <constraint firstItem="1ZR-xz-RY9" firstAttribute="top" secondItem="pmt-jl-TVP" secondAttribute="bottom" constant="8" id="Ith-Ph-32d"/>
                             <constraint firstItem="PTG-B7-Np6" firstAttribute="top" secondItem="VUl-h0-bau" secondAttribute="top" id="Ivz-W5-ofF"/>
@@ -396,11 +395,11 @@
                             <constraint firstItem="w42-6Y-Okk" firstAttribute="top" secondItem="1ZR-xz-RY9" secondAttribute="bottom" constant="7.5" id="c0P-Bp-aA6"/>
                             <constraint firstItem="mOn-83-DAO" firstAttribute="top" secondItem="w42-6Y-Okk" secondAttribute="bottom" constant="8" id="ekW-9D-IY0"/>
                             <constraint firstItem="w42-6Y-Okk" firstAttribute="trailing" secondItem="1ZR-xz-RY9" secondAttribute="trailing" id="iNN-tg-Xzf"/>
-                            <constraint firstItem="1ZR-xz-RY9" firstAttribute="trailing" secondItem="VUl-h0-bau" secondAttribute="trailingMargin" id="oY2-79-JD2"/>
+                            <constraint firstItem="1ZR-xz-RY9" firstAttribute="trailing" secondItem="VUl-h0-bau" secondAttribute="trailingMargin" constant="-8" id="oY2-79-JD2"/>
                             <constraint firstItem="1ZR-xz-RY9" firstAttribute="leading" secondItem="8DU-Fo-Rr7" secondAttribute="leading" id="rJ2-sa-d3H"/>
                             <constraint firstItem="1ZR-xz-RY9" firstAttribute="trailing" secondItem="8DU-Fo-Rr7" secondAttribute="trailing" id="u1e-sp-CGf"/>
                             <constraint firstItem="PTG-B7-Np6" firstAttribute="leading" secondItem="VUl-h0-bau" secondAttribute="leading" id="uIV-iN-RTv"/>
-                            <constraint firstItem="w42-6Y-Okk" firstAttribute="leading" secondItem="1ZR-xz-RY9" secondAttribute="leading" id="v45-VT-Aiw"/>
+                            <constraint firstItem="w42-6Y-Okk" firstAttribute="leading" secondItem="1ZR-xz-RY9" secondAttribute="leading" constant="8" id="v45-VT-Aiw"/>
                         </constraints>
                         <connections>
                             <outletCollection property="coloredViews" destination="PTG-B7-Np6" id="n7E-V6-9ka"/>
